kubernetes/apps/immich/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
